# ccfake

./: .gitignore  CMakeLists.txt  README.md  ccup.sh
docs/: TODOs.md
include/ccfake/: ccfake.h
include/ccfake/actor/: actor.h
include/ccfake/base/: container_eq.h  default.h  enum.h  ext_traits.h  keyword.h  keywords.h  operator.h  status.h  traits.h
include/ccfake/dtree/: dtree.h  dtree_builder.h  dtree_dispatcher.h  dtree_dispather.h  dtree_executor.h  dtree_matcher.h  dtree_node.h  dtree_node_builder.h  dtree_visitor.h
include/ccfake/log/: log.h  log_color.h  log_file.h  log_level.h  log_print.h
include/ccfake/msg/: msg.h
src/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  test_customer.cc  test_hotel.cc  test_sample.cc  test_system.cc
test/device/: modem.h
test/hotel/: customer.h  hotel.h  hotel_close.h  hotel_layout.h  hotel_layout_visitor.h  hotel_reserve.h  hotel_visitor.h  mail.h
